<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8sp" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/filename"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:text="@string/filename"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/file_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/file_date"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/filesize"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:drawableRight="@android:drawable/ic_media_play"
        android:text="@string/filesize"
        android:textSize="18sp" >
    </TextView>

</LinearLayout>