<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.backyardbrains.view.BYBThresholdHandle
        android:id="@+id/threshold_handle_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical"
        app:byb_orientation="left"/>

    <com.backyardbrains.view.BYBThresholdHandle
        android:id="@+id/threshold_handle_right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start|center_vertical"
        app:byb_orientation="right"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/threshold_drag_surface_w"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:layout_gravity="top|end"
        android:gravity="center">

        <ImageButton
            android:id="@+id/ibtn_remove_threshold"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_threshold_remove"
            app:srcCompat="@drawable/ic_delete_white_32dp"/>

        <ImageButton
            android:id="@+id/threshold0"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/handle1"
            android:contentDescription="@string/content_desc_threshold_select_one"/>

        <ImageButton
            android:id="@+id/threshold1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
            android:src="@drawable/handle2"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_threshold_select_two"/>

        <ImageButton
            android:id="@+id/threshold2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
            android:src="@drawable/handle3"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_threshold_select_three"/>

        <ImageButton
            android:id="@+id/ibtn_add_threshold"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_desc_threshold_new"
            app:srcCompat="@drawable/ic_add_white_32dp"/>
    </LinearLayout>
</FrameLayout>