<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/baseParentLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

    <FrameLayout
        android:id="@+id/glContainer"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >
    </FrameLayout>

    <ImageView
        android:id="@+id/tickmarkImageView"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@id/glContainer"
        android:layout_alignTop="@id/glContainer"
        android:scaleType="fitXY"
        android:src="@drawable/tickmarks"
        android:contentDescription="@string/tickmarks_on_left_side_of_screen">
    </ImageView>



            <TextView
                android:id="@+id/DebugTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#ffffffff"
                android:gravity="top"
                android:visibility="gone"
                android:typeface="monospace"
                android:textSize="8dp">

            </TextView>

    <TextView
        android:id="@+id/mVLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tickmarkImageView"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/default_milliseconds" />

    <LinearLayout
        android:id="@+id/millisecondsViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/triggerViewSampleChangerLayout"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/millisecondsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/default_milliseconds" />
        <ImageView
            android:id="@+id/millisecondsViewLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/msline"
            android:layout_gravity="center_horizontal|bottom"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/noTouchButtonsHolderLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="40dp"
        android:visibility="gone">
        <ImageButton
            android:id="@+id/zoomInButtonV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:contentDescription="@string/zoom_in_button_v"
            android:padding="5sp"
            android:src="@drawable/zoom_in_v" />
        <ImageButton
            android:id="@+id/zoomOutButtonV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:contentDescription="@string/zoom_out_button_v"
            android:padding="5sp"
            android:src="@drawable/zoom_out_v" />
        <ImageButton
            android:id="@+id/zoomInButtonH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:contentDescription="@string/zoom_in_button_h"
            android:padding="5sp"
            android:src="@drawable/zoom_in_h" />
        <ImageButton
            android:id="@+id/zoomOutButtonH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:contentDescription="@string/zoom_out_button_h"
            android:padding="5sp"
            android:src="@drawable/zoom_out_h" />
        <ImageButton
            android:id="@+id/moveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:contentDescription="@string/move_button"
            android:padding="5sp"
            android:src="@drawable/move" />
    </LinearLayout>
    <!--<TextView-->
        <!--android:id="@+id/debugText"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textColor="#ffffffff"-->
        <!--android:layout_gravity="center_horizontal|top"-->
        <!--android:text="debug"-->
        <!--android:visibility="visible">-->
    <!--</TextView>-->

</RelativeLayout>